--- a/gb/25/9/9/n14590341.md
+++ b/gb/25/9/9/n14590341.md
@@ -4,42 +4,36 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>加澳军舰通过台海 台外交部：维护和平稳定</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/09/id14585546-792056.jpg" class="" data-thumbnail="true" />
 <h6></h6>
-<hr>【大纪元2025年09月09日讯】（大纪元记者钟元台湾报导）加拿大和澳洲军舰6日上午穿越台湾海峡。中华民国外交部表示，此举持续展现加拿大及澳洲以具体行动维护台海和平稳定的坚定决心，台湾表示欢迎，并将持续强化自我防卫能力，并深化与民主友盟的交流及合作。</p><p>加拿大海军哈利法克斯级巡防舰“魁北克市号”（HMCS Ville de Québec）与澳洲导弹驱逐舰“布里斯本号”（HMAS Brisbane）于6日联袂穿越台湾海峡。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>中共东部战区发言人施毅称，中共海空兵力对加澳军舰过航行动“全程跟监警戒，保持高度戒备，坚决捍卫国家主权安全和地区和平稳定”。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>对于加拿大及澳洲以具体行动捍卫台海的自由、和平及开放，并展现台湾海峡是国际水域的坚定立场，中华民国外交部表示欢迎与肯定。</p><p>中华民国外交部指出，这次是加国军舰今年第2度穿越台湾海峡，也是加国自2022年11月发布印太战略以来，第7度派遣军舰航经台海，此外也是澳洲今年首度公开派遣军舰穿越台湾海峡，持续展现加拿大及澳洲两国以具体行动维护台海和平稳定的坚定决心。</p><p>中华民国外交部表示，面对中共的各项侵扰，中华民国政府将持续强化自我防卫能力，并深化与民主友盟的交流及合作，共同捍卫以规则为基础的国际秩序，以及维护台海及印太区域的和平、稳定与繁荣。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>中华民国国防部今天（9日）公布共军在台海周边空域动态，统计自8日上午6时至今天上午6时止，侦获共机3架次（其中逾越海峡中线进入北部空域2架次）及共舰6艘、公务船1艘，总计中共10机舰船持续在台海周边活动。</p><p>中华民国国防部指出，国军运用任务机、舰及岸置飞弹（大陆称导弹）系统严密监控与应处。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>责任编辑：叶紫微
+<hr>【大纪元2025年09月09日讯】（大纪元记者钟元台湾报导）加拿大和澳洲军舰6日上午穿越台湾海峡。中华民国外交部表示，此举持续展现加拿大及澳洲以具体行动维护台海和平稳定的坚定决心，台湾表示欢迎，并将持续强化自我防卫能力，并深化与民主友盟的交流及合作。</p><p>加拿大海军哈利法克斯级巡防舰“魁北克市号”（HMCS Ville de Québec）与澳洲导弹驱逐舰“布里斯本号”（HMAS Brisbane）于6日联袂穿越台湾海峡。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>中共东部战区发言人施毅称，中共海空兵力对加澳军舰过航行动“全程跟监警戒，保持高度戒备，坚决捍卫国家主权安全和地区和平稳定”。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>对于加拿大及澳洲以具体行动捍卫台海的自由、和平及开放，并展现台湾海峡是国际水域的坚定立场，中华民国外交部表示欢迎与肯定。</p><p>中华民国外交部指出，这次是加国军舰今年第2度穿越台湾海峡，也是加国自2022年11月发布印太战略以来，第7度派遣军舰航经台海，此外也是澳洲今年首度公开派遣军舰穿越台湾海峡，持续展现加拿大及澳洲两国以具体行动维护台海和平稳定的坚定决心。</p><p>中华民国外交部表示，面对中共的各项侵扰，中华民国政府将持续强化自我防卫能力，并深化与民主友盟的交流及合作，共同捍卫以规则为基础的国际秩序，以及维护台海及印太区域的和平、稳定与繁荣。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>中华民国国防部今天（9日）公布共军在台海周边空域动态，统计自8日上午6时至今天上午6时止，侦获共机3架次（其中逾越海峡中线进入北部空域2架次）及共舰6艘、公务船1艘，总计中共10机舰船持续在台海周边活动。</p><p>中华民国国防部指出，国军运用任务机、舰及岸置飞弹（大陆称导弹）系统严密监控与应处。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>责任编辑：叶紫微#
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/26/n14445843.md#1">澳总理被批误导 令公众以为中共提前通报演习</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/27/n14447149.md#1">中共大使拒绝为延迟向澳洲通知演习道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/28/n14447279.md#1">交通部比国防部先获知中共演习?工党被批混乱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/4/n14449931.md#1">中共军舰逼近珀斯海域 澳美出动潜艇和驱逐舰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/7/n14452684.md#1">澳洲专家促政府收回达尔文港 以反击中共军演</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/31/n14471420.md#1">中共间谍船出现在澳洲南海岸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/5/n14499323.md#1">澳议员：已启动收回中企达尔文港租赁工作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532871.md#1">澳国防军司令：更多中共军舰将在澳洲附近出没</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/28/n14582632.md#1">澳洲夜空即将再次迎来血月</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629203.md#1">南澳地方议会获权处理废弃购物手推车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/14/n11044461.md#1" target="_blank">钟声：他们晚年为何忏悔</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/1/n13836621.md#1">九九重阳名从何来 称心快意的佳节风俗有哪些？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619998.md#1">日本庭园之“借景”生情——追求天人合一的更高境界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14627235.md#1">把苦熬成甜 把山走成路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/4/9/27/n672344.md#1">肉身不腐的奇迹——圣塞西莉亚的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14623950.md#1">《闱闱道红楼》出版自序</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628171.md#1">【百年真相】延安暴富之谜：鸦片税粮榨干百姓</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628167.md#1">【新闻大破解】川普“台湾就是台湾” 堵了中共嘴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627802.md#1">【直播】布朗斯通研究所第五届年会暨庆典</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626737.md#1">星际彗星3I/ATLAS绕日爆奇异蓝光 亮度惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626713.md#1">美离全面禁止中国路由器TP-link又近一步</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626703.md#1">安世中国母公司要求恢复张学政职位 荷兰回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627840.md#1">林心如曝霍建华很节省 但对家人很慷慨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626818.md#1">小沈阳新片成本1亿 预售7天总票房仅6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627830.md#1">台知名音乐人屠颖在粤下榻酒店猝逝 终年62岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627426.md#1">迪士尼与YouTube TV谈判破裂 旗下频道全下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626717.md#1">2025年还剩2个月 港演艺圈已痛失9位老戏骨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14627139.md#1">什么垃圾食品最伤脑？ 美国研究揭晓答案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627721.md#1">【摄影天地】褐喉食蜜鸟在花间的俏丽身影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626929.md#1">植物界的“美猴王”濒临绝种 专家示警</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628003.md#1">研究证实 每天获得拥抱的人比较不会忧郁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626543.md#1">撬开生蚝很简单 餐馆厨师教你正确操作手法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688423.md#1">【百年真相】习亲提24个亿元贪官 酿七大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688343.md#1">【重播】高市早苗会晤来访英首相并举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688656.md#1">【时事金扫描】伊朗多地被炸 美以斩首开始？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/9/9/n14590341.htm">加澳军舰通过台海 台外交部：维护和平稳定</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590341.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
